adding tests with Hoverfly